Fixed gap between nav and mobile side menu

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -126,7 +126,7 @@ body {
     width: 0;
     position: fixed;
     z-index: 3;
-    top: 8.5vw;//top: 44px;
+    top: 9vw;//top: 44px;
     left: 0;
     background: $primaryColor;
     overflow-x: hidden;
@@ -463,6 +463,5 @@ Issues:
 Mobile Issues:
     Landscape orientation
     Footer spacing
-    Place hamburger left of logo
-    Gap between side menu top and nav
+    Gap between side menu top and nav on some landscape orientations
 */
